--- a/Lesson05_FoodDrink/05_QA.md
+++ b/Lesson05_FoodDrink/05_QA.md
@@ -29,3 +29,52 @@ Nếu bạn cần dùng từ đồng nghĩa trong một câu cụ thể, mình c
 
 ugly vs bad
 xấu ngoại hình và xấu tính cách
+
+
+I will stay in Da lat in a week's
+I stayed in Da Lat for a week.
+
+Wed 21 May
+
+hypertension: cao huyết áp
+
+bí quyết sống thọ: what is the note to long life?
+
+he gets hypertension: high/low blood  pressure
+
+fresh water boiled water/fitered water/pure drinking water.
+
+botted pure drinking water.
+
+they are in serious debt/life pressing/lovesick/sick/fate/
+
+His life is sealed/fate/destiny
+
+cuộc đời anh ta đã được đóng dấu/định mệnh/số phận
+
+if someone in my family is sick, he will go to a hospital (từ he dùng không phân biệt nam nữ)
+
+I have a scooter, she is very economical
+Tôi có chiếc xe số, nó rất lợi xăng (kinh tế)
+
+they have not enought knowlege purpose/target/goal of life.
+
+unique works/uncomparison works: tác phẩm duy nhất.
+
+we talk and eat at random: Chúng ta ăn nói bậy bạ.
+
+the frog dies because of its mouth: con ếch chết vì cái miệng của nó.
+
+river mouth: cửa sông.
+
+bank: ngân hàng
+river bank/bank of river: bờ sông.
+N of N: sự kết hợp 2 danh từ.
+
+a teapot: bình để pha trà.
+a pot of tea: bình trà.
+
+pessimistic/negative/minus idea appears: ý tưởng tiêu cực xuất hiện
+
+optimistic/possitive/plus idea: ý tưởng tích cực
+
