food and drinks

--- a/Lesson05_FoodDrink/05_QA.md
+++ b/Lesson05_FoodDrink/05_QA.md
@@ -78,3 +78,33 @@ pessimistic/negative/minus idea appears: ý tưởng tiêu cực xuất hiện
 
 optimistic/possitive/plus idea: ý tưởng tích cực
 
+
+Thursday 22nd May, 2025
+
+I usually drink coffee at Sunrise's with my friend in the morning
+Các câu hỏi:
+	1.	What do you usually drink in the morning?
+→ I usually drink coffee.
+	2.	Where do you usually drink coffee?
+→ At Sunrise’s.
+	3.	Who do you usually drink coffee with?
+→ With my friend.
+	4.	When do you usually drink coffee?
+→ In the morning.
+	5.	Do you usually drink coffee alone or with someone?
+→ With someone / With my friend.
+	6.	How often do you drink coffee at Sunrise’s?
+→ I usually drink coffee there.
+	7.	Do you like drinking coffee at Sunrise’s? Why or why not?
+→ Yes, because it’s cozy and the coffee is great.
+	8.	What do you and your friend talk about when drinking coffee?
+→ We talk about work, life, and plans for the day.
+
+
+Vàng dễ trao đổi hơn kim cương.
+Gold is easy to be exchanged more than diamond
+
+Tại sao chúng ta không chết vì kẻ thù mà chết bởi cái miệng của mình?
+Why don't we died because of enemies by our mouth itseft?
+
+
