--- a/Lesson06_VietNamese_traditianal/06_QA.md
+++ b/Lesson06_VietNamese_traditianal/06_QA.md
@@ -17,3 +17,15 @@ militery area: khu quân sự
 join the armu
 do the militery serive
 
+occidental people/ dân phương Tây Gregorian lịch.
+oriental people/ dân phương Đông 
+
+parent- grand parents - great grand parents 
+
+the flower is symbolic of NY in the Soth is Apricot blossom Câu gián tiếp
+
+the flower symbols for NY in South is Apricot blossom Câu trực tiếp
+
+The flower that symbolizes Tet in southern Vietnam is the apricot blossom
+
+The flower symbol for the New Year in the South is the apricot blossom.
