--- a/Lesson06_VietNamese_traditianal/06_QA.md
+++ b/Lesson06_VietNamese_traditianal/06_QA.md
@@ -22,9 +22,9 @@ oriental people/ dân phương Đông
 
 parent- grand parents - great grand parents 
 
-the flower is symbolic of NY in the Soth is Apricot blossom Câu gián tiếp
+the flower is symbolic of NY in the Sourth is Apricot blossom Câu gián tiếp
 
-the flower symbols for NY in South is Apricot blossom Câu trực tiếp
+the flower symbols for NY in Sourth is Apricot blossom Câu trực tiếp
 
 The flower that symbolizes Tet in southern Vietnam is the apricot blossom
 
