--- a/Lesson06_VietNamese_traditianal/06_QA.md
+++ b/Lesson06_VietNamese_traditianal/06_QA.md
@@ -29,3 +29,52 @@ the flower symbols for NY in Sourth is Apricot blossom Câu trực tiếp
 The flower that symbolizes Tet in southern Vietnam is the apricot blossom
 
 The flower symbol for the New Year in the South is the apricot blossom.
+
+fit (V)/(A) for
+
+suitable (A) for
+
+your shirt fits for your body
+S            V        O
+
+your shirt is fit for your body
+
+becoming to 
+
+peach blossom doest's fits for hot weather in the South Vietnam
+or peach blossom is not fit for hot weather in the South Vietnam
+
+East or West home the best.
+
+I will I were at home now
+
+I will you was at here
+
+negotiate thương lượng.
+
+There  is no flood in here but there used to be flood in here.
+
+I used to take a bath in the rain without clothes.
+
+why aren't there 
+
+there is/are
+
+there used to be a graveyard in here.
+
+rubbish lot bãi rác
+
+Chủ's + sth/so
+
+my wife's father
+
+uncle/aunt
+
+Mononym: đồng âm dị nghĩa
+
+Antonym:
+
+Synonym
+
+alive language
+dead language
