--- a/Lesson06_VietNamese_traditianal/06_QA.md
+++ b/Lesson06_VietNamese_traditianal/06_QA.md
@@ -1,80 +1,356 @@
-wednesday 28 May
 
--Celebrate(v) - New year/weadding/birtday/anniversary of death.
--give someone newyear's greetings.
-the old students usually give their teachers New year's greetings on the thirdday of New year.
 
-celebrate 'selereit'
-decorate 'dekereit'
+🗓 Wednesday 28 May
 
-help SO to do STH I'll help you to wash up : to se rua bat
-help SO do STH I'll help you wash up : to phu ban rua bat.
+Thứ Tư, ngày 28 tháng 5
 
-no loitering: cấm tụ tập
-loitering: lảng vảng
+⸻
 
-militery area: khu quân sự
-join the armu
-do the militery serive
+1. Celebrate (v) /ˈsel.ə.breɪt/
 
-occidental people/ dân phương Tây Gregorian lịch.
-oriental people/ dân phương Đông 
+Ăn mừng, kỷ niệm
+Ví dụ:
 
-parent- grand parents - great grand parents 
+	•	Celebrate New Year / wedding / birthday / anniversary of death
+→ Kỷ niệm Tết / đám cưới / sinh nhật / ngày giỗ
 
-the flower is symbolic of NY in the Sourth is Apricot blossom Câu gián tiếp
+⸻
 
-the flower symbols for NY in Sourth is Apricot blossom Câu trực tiếp
+2. Give someone New Year’s greetings
 
-The flower that symbolizes Tet in southern Vietnam is the apricot blossom
+Chúc Tết ai đó
+Ví dụ:
 
-The flower symbol for the New Year in the South is the apricot blossom.
+	•	The old students usually give their teachers New Year’s greetings on the third day of New Year.
+→ Cựu học sinh thường chúc Tết thầy cô vào mùng 3 Tết.
 
-fit (V)/(A) for
+⸻
 
-suitable (A) for
+3. Pronunciation (Cách đọc)
+	•	Celebrate: /ˈsel.ə.breɪt/
+	•	Decorate: /ˈdek.ə.reɪt/ → Trang trí
 
-your shirt fits for your body
-S            V        O
+⸻
 
-your shirt is fit for your body
+4. Help someone (to) do something
 
-becoming to 
+Giúp ai làm gì
 
-peach blossom doest's fits for hot weather in the South Vietnam
-or peach blossom is not fit for hot weather in the South Vietnam
+	•	I’ll help you (to) wash up. → Tôi sẽ giúp bạn rửa bát
+→ (wash up = rửa bát)
 
-East or West home the best.
+⸻
 
-I will I were at home now
+5. No loitering
 
-I will you was at here
+Cấm tụ tập/ la cà
 
-negotiate thương lượng.
+	•	Loitering /ˈlɔɪ.tər.ɪŋ/: hành vi lảng vảng, không mục đích rõ ràng
 
-There  is no flood in here but there used to be flood in here.
+⸻
 
-I used to take a bath in the rain without clothes.
+6. Military area /ˈmɪl.ɪ.tər.i/
 
-why aren't there 
+Khu vực quân sự
 
-there is/are
+	•	Join the army → Nhập ngũ
+	•	Do military service → Thực hiện nghĩa vụ quân sự
 
-there used to be a graveyard in here.
+⸻
 
-rubbish lot bãi rác
+7. Occidental ↔ Oriental
+	•	Occidental people → Người phương Tây
+	•	Oriental people → Người phương Đông
+	•	Gregorian calendar → Lịch dương
 
-Chủ's + sth/so
+⸻
 
-my wife's father
+8. Family Generations
+	•	Parent → Cha mẹ
+	•	Grandparents → Ông bà
+	•	Great-grandparents → Cụ
 
-uncle/aunt
+⸻
 
-Mononym: đồng âm dị nghĩa
+9. Flowers & Symbolism (Biểu tượng hoa ngày Tết)
+	•	The flower that symbolizes Tet in southern Vietnam is the apricot blossom.
+→ Hoa tượng trưng cho Tết ở miền Nam là hoa mai.
+	•	Peach blossom doesn’t fit hot weather in the South.
+→ Hoa đào không hợp với thời tiết nóng ở miền Nam.
 
-Antonym:
+⸻
 
-Synonym
+10. Fit / Suitable / Becoming
+	•	Fit (v): vừa vặn
+	•	Suitable (adj) for: phù hợp
+	•	Becoming to (adj): hợp, đẹp với ai đó
 
-alive language
-dead language
+Ví dụ:
+	•	Your shirt fits your body.
+	•	Your shirt is fit for your body.
+	•	Peach blossom is not fit for hot weather.
+
+⸻
+
+11. Proverbs & Wishes
+	•	East or West, home is best. → Dù Đông hay Tây, nhà là nhất.
+	•	I wish I were at home now. → Ước gì tôi đang ở nhà.
+	•	I wish you were here. → Ước gì bạn đang ở đây.
+
+⸻
+
+12. Negotiate /nɪˈɡəʊ.ʃi.eɪt/
+
+Thương lượng
+
+⸻
+
+13. “There is/are” vs. “There used to be”
+	•	There is no flood here. → Không có lũ
+	•	There used to be a flood here. → Từng có lũ
+	•	There used to be a graveyard here. → Từng có nghĩa địa ở đây
+
+⸻
+
+14. Rubbish lot
+
+Bãi rác
+
+⸻
+
+15. Family Vocabulary
+	•	My wife’s father → Bố vợ
+	•	Uncle/Aunt → Chú, bác / Cô, dì
+
+⸻
+
+16. Vocabulary Types
+	•	Mononym: Từ đồng âm (đọc giống, nghĩa khác)
+	•	Antonym: Từ trái nghĩa
+	•	Synonym: Từ đồng nghĩa
+
+⸻
+
+17. Alive language vs. Dead language
+	•	Alive language → Ngôn ngữ đang sử dụng
+	•	Dead language → Ngôn ngữ không còn sử dụng (ví dụ: Latin)
+
+⸻
+
+18. Love & Tết Humor
+	•	Boys in love are very afraid of New Year
+→ Con trai đang yêu rất sợ Tết (vì tốn kém)
+	•	Spend much money on love fee → Tốn tiền vì yêu
+
+⸻
+
+19. Passive Voice
+	•	Will be taken everywhere by her boyfriend
+→ Sẽ được bạn trai dẫn đi khắp nơi
+
+⸻
+
+20. Other Vocabulary
+	•	Self-confidence: tự tin
+	•	Purpose: mục đích
+	•	Piousness: lòng mộ đạo / đức hạnh
+	•	Merit: công đức
+	•	Express: thể hiện
+	•	Ingratitude: sự vô ơn
+
+⸻
+
+Dưới đây là bản hướng dẫn cách đọc, cấu trúc ngữ pháp và dịch nghĩa các từ và câu bạn đưa ra, chia theo từng mục để dễ học:
+
+⸻
+
+📅 Tue 3 Jun 2025
+
+Thứ Ba, ngày 3 tháng 6 năm 2025
+
+⸻
+
+🌟 New Year’s Eve (Giao thừa)
+
+❓ What do you do on New Year’s Eve?
+
+Bạn làm gì vào đêm giao thừa?
+📌 Cấu trúc câu hỏi hiện tại đơn (thói quen):
+
+	•	What do you do on [occasion]?
+
+💬 I watch the firework show on TV and go to bed.
+
+Tôi xem pháo hoa trên TV và đi ngủ.
+
+⸻
+
+🥩 Cách nói về số lượng đồ ăn
+
+✅ I bought one and a half kilograms of meat.
+
+= I bought 1.5 kg of meat.
+= I bought one kilogram and 500 grams of meat.
+
+Tôi đã mua một ký rưỡi thịt / 1kg và 500g thịt.
+
+📌 Cấu trúc:
+	•	One and a half + danh từ số nhiều
+	•	[Số kg] + of + danh từ
+
+⸻
+
+🎉 Chúc Tết
+
+✅ Give someone New Year’s greetings
+
+= Give New Year’s greetings to someone
+
+Chúc Tết ai đó
+
+📌 Cấu trúc:
+	•	Give + SO + greetings
+	•	Give greetings to + SO
+
+⸻
+
+👻 Ma & Linh hồn
+
+❓ Do you believe in ghosts?
+
+Bạn có tin vào ma không?
+
+📌 Cấu trúc câu hỏi hiện tại đơn với “do”
+
+⸻
+
+💬 Ghosts just appear in their image when they used to do bad jobs.
+
+Ma chỉ hiện ra dưới hình ảnh của họ khi họ từng làm việc xấu.
+
+📌 “Used to + V-inf”: từng làm gì trong quá khứ
+📌 Ghosts appear in their image: Ma hiện ra với hình dáng cũ của họ
+
+⸻
+
+💬 Ghosts exist in their image and parallel with my world.
+
+Ma tồn tại dưới hình ảnh của họ và song song với thế giới của tôi.
+
+📌 Parallel with: song song với
+📌 Exist in their image: tồn tại dưới hình ảnh cũ
+
+⸻
+
+🃏 Play cards – Chơi bài
+
+✅ Play cards
+
+Chơi bài
+
+✅ Be addicted to gambling
+
+Nghiện đánh bạc
+📌 To be addicted to + N/V-ing
+
+⸻
+
+💊 Ecstasy – Thuốc lắc
+	•	Ecstasy: /ˈek.stə.si/ → thuốc lắc
+	•	It can cause hallucinations.
+→ Nó có thể gây ảo giác
+	•	He was arrested for selling ecstasy at the music festival.
+→ Anh ta bị bắt vì bán thuốc lắc tại lễ hội âm nhạc.
+
+📌 Hallucination /həˌluː.sɪˈneɪ.ʃən/: Ảo giác
+
+⸻
+
+🧍‍♂️ Những người không thích Tết
+
+💬 Those who don’t like Tet.
+
+Những người không thích Tết
+📌 Those who + V: những người mà…
+
+⸻
+
+🏥 Sức khỏe
+
+✅ Be in treatment
+
+Đang điều trị
+
+✅ Lung cancer
+
+Ung thư phổi
+📌 Lung: phổi | Cancer: ung thư
+
+⸻
+
+🕯️ Thắp hương ngày Tết
+
+❓ Do you usually burn incense for your ancestors on New Year’s Eve?
+❓ Do your offer josssticks to your ancestors on New Year’s Eve?
+
+Bạn thường thắp hương cúng ông bà vào giao thừa chứ?
+
+📌 Burn incense: thắp hương
+📌 Ancestors: tổ tiên
+📌 On New Year’s Eve: vào đêm giao thừa
+
+⸻
+
+🍱 Tray of – Mâm / Khay
+	•	A tray of fruit → một mâm trái cây
+	•	A tray of offerings → một mâm cúng
+📌 Tray of + danh từ không đếm được / số nhiều
+
+⸻
+
+📚 Tổng hợp cách đọc các từ chính:
+
+Từ tiếng Anh	Cách đọc IPA	Nghĩa tiếng Việt
+Ecstasy	/ˈek.stə.si/	Thuốc lắc
+Hallucination	/həˌluː.sɪˈneɪ.ʃən/	Ảo giác
+Ancestors	/ˈæn.ses.tərz/	Tổ tiên
+Parallel	/ˈpær.ə.lel/	Song song
+Lung cancer	/lʌŋ ˈkæn.sər/	Ung thư phổi
+Treatment	/ˈtriːt.mənt/	Điều trị
+Gambling	/ˈɡæm.blɪŋ/	Cờ bạc
+Ghost	/ɡəʊst/	Ma
+Tray	/treɪ/	Mâm, khay
+
+
+📞 Call / Phone / Book / Thanks in advance
+👉 Gọi / Gọi điện / Đặt chỗ / Cảm ơn trước
+	•	Call /kɔːl/: gọi
+	•	Phone /fəʊn/: gọi điện thoại
+	•	Book /bʊk/: đặt trước
+	•	Thanks in advance /θæŋks ɪn ədˈvɑːns/: cảm ơn trước
+
+⸻
+
+🗨️ Anyway, I’d like to say thanks in advance
+👉 Dù sao thì, tôi cũng muốn cảm ơn trước
+
+📌 Cấu trúc:
+	•	Anyway = Dù sao thì
+	•	I’d like to say = Tôi muốn nói
+	•	Thanks in advance = Cảm ơn trước
+
+⸻
+
+👫 Our spouse / Married couple
+👉 Vợ chồng / Người phối ngẫu
+	•	Spouse /spaʊs/: vợ hoặc chồng (người phối ngẫu)
+	•	Married couple /ˈmær.id ˈkʌp.əl/: cặp vợ chồng đã kết hôn
+
+⸻
+
+😂 LOL – Laugh out loud
+👉 Viết tắt của “cười lớn tiếng”
+	•	Laugh out loud /lɑːf aʊt laʊd/: cười to
+
+📌 Thường dùng trong tin nhắn, mạng xã hội để biểu thị sự buồn cười.
+
