correct by teacher

--- a/Lesson10_Exercise/06_QA.md
+++ b/Lesson10_Exercise/06_QA.md
@@ -1,6 +1,29 @@
-Certainly! Here’s how you can expand the subject of the conversation and original passage into a broader topic for deeper discussion or writing:
+work with hands/brain 
+manual worker
 
-⸻
+need to do something
+
+you need to buy an electric bike for yur daughter
+it is very necessary for you to buy an electric bike for your daungther
+there's no need for you to buy an i-phone XVI for your wife.
+
+Do you want the road to the graveyard to be farther or closer to your home?
+
+If we don't use our muscle, they will be wean, they will be fatter
+
+
+whiten/widen: trắng hơn/rộng hơn/
+
+arrive at/in 
+arrive at school
+arive in Hanoi
+leave for some where.
+move in their jobs
+wholesome
+
+a sound spirit
+
+
 
 🎯 Original Subject:
 
