--- a/Lesson10_CanTho/06_QA.md
+++ b/Lesson10_CanTho/06_QA.md
@@ -3,3 +3,31 @@ anyone: chú ý dùng ở thể phủ định
 còn không sử dụng 
 any girl/any boy
 any girl wants to get marreid with a rich man.
+
+
+Monday 30 th June, 2025
+
+Các loại bênh và cách nói
+
+1. ache(N): đau bên trong
+Have a apart of our body + ache
+
+What's wrong with you?
+What's the matter with you?
+What sickness/illness to you get get with?
+
+ex: I have a head_ache/back_ache/stomach_ache
+
+2. pain: đau bên ngoài (vết thương hở)
+Have a pain in + a part
+ex: she has a pan in her leg.
+
+3. sore
+Have a sore + a part
+ex: My son has a sore throat/nose/ears/eyes.
+
+4. Have a fever/cold/dengue fever (sốt xuất huyết)/diabetes (bệnh tiểu đường)
+
+có thể dùng get thay cho have 
+
+fluenza/birdflu
