--- a/Lesson10_CanTho/06_QA.md
+++ b/Lesson10_CanTho/06_QA.md
@@ -31,3 +31,104 @@ ex: My son has a sore throat/nose/ears/eyes.
 có thể dùng get thay cho have 
 
 fluenza/birdflu
+
+float(V) 
+floating hotel/market
+Phung Hiep/Cai Rang floating market
+
+there is a Variety of good fruits
+
+Các từ vựng cần học
+animal
+fruit
+flower
+furnature
+parts of our body
+
+the ranks of durians.
+
+bac/ferry station: bến phà
+you will throw up/vomit terribly
+
+Chú ý về tính từ.
+Công dụng:
+Bổ nghĩa cho danh từ, miêu tả đặc điểm, tính chất.
+
+cô ta rất là đẹp
+She is beautyful
+cô ta khiêu vũ rất là đẹp
+She dances beautyfully
+cô ta là một vũ sư đẹp
+she is a beautiful dancer
+
+
+🟦 1. So sánh: Tính từ vs Trạng từ
+
+Đặc điểm	Tính từ (Adjective)	Trạng từ (Adverb)
+💡 Chức năng	Miêu tả danh từ	Miêu tả động từ, tính từ, hoặc trạng từ khác
+❓ Trả lời câu hỏi	What kind? Which one? How many?	How? When? Where? How often? To what extent?
+🧱 Vị trí thường gặp	Trước danh từ hoặc sau “to be” (is/are/were…)	Sau động từ chính hoặc trước tính từ/trạng từ khác
+📝 Hình thức	Không thêm -ly (thường là gốc)	Thường có -ly ở cuối (nhưng có ngoại lệ)
+
+
+
+🟦 2. Ví dụ minh họa
+
+✅ TÍNH TỪ (Adjective)
+
+Câu tiếng Anh	Giải thích
+She is beautiful.	“beautiful” miêu tả she (cô ấy là người như thế nào).
+He is a fast runner.	“fast” miêu tả danh từ “runner”.
+The soup smells delicious.	“delicious” đứng sau động từ nối “smells” để miêu tả “soup”.
+
+
+⸻
+
+✅ TRẠNG TỪ (Adverb)
+
+Câu tiếng Anh	Giải thích
+She sings beautifully.	“beautifully” miêu tả cách cô ấy hát (động từ “sings”).
+He runs fast.	“fast” ở đây là trạng từ, miêu tả cách anh ấy chạy (không đổi hình thức).
+They arrived late.	“late” miêu tả thời điểm họ đến.
+
+⸻
+
+🔎 Ghi chú quan trọng:
+	•	Một số từ giống nhau ở cả hai loại:
+	•	Fast, hard, early, late → vừa là tính từ, vừa là trạng từ.
+	•	Ví dụ:
+	•	He is a hard worker. (tính từ)
+	•	He works hard. (trạng từ)
+
+
+Tuesday, 1st July, 2025
+
+The girl in the blue Ba Ba suit is my sister.
+The girl with a black purse (/pɜːrs/) is my daughter.
+
+good appetit
+cafe' au lait: ca phe sua.
+immense: bao la, rong lon.
+
+we should have comfotable suit anti - mosquitoes (/ˌæn.taɪ məˈskiː.t̬oʊz/)
+
+atract:atracatract(V)V: cuốn hút quyến rũ.
+
+catfish have:
+mustache: râu mép
+bread: râu cằm
+no scales
+
+Sông Tiền và sông Hậu xuất phát từ sông nào?
+
+Cá da trơn không sống được trong nước mặn vì sao?
+
+cá da trơn được nuôi ở đâu?
+
+pump the air into his motobike: bơm hơi cho xe của anh ấy.
+
+remind/recollect/recall/evoke
+
+system of interlacing rivers anh canals (kênh rạch)
+
+
