--- a/Lesson10_CanTho/06_QA.md
+++ b/Lesson10_CanTho/06_QA.md
@@ -130,5 +130,5 @@ pump the air into his motobike: bơm hơi cho xe của anh ấy.
 remind/recollect/recall/evoke
 
 system of interlacing rivers anh canals (kênh rạch)
-
+streams (suoi)
 
