cap nhat 2 bai moi

--- a/Lesson10_CanTho/06_QA.md
+++ b/Lesson10_CanTho/06_QA.md
@@ -119,6 +119,9 @@ mustache: râu mép
 bread: râu cằm
 no scales
 
+
+Wednesday 2nd July, 2025
+
 Sông Tiền và sông Hậu xuất phát từ sông nào?
 
 Cá da trơn không sống được trong nước mặn vì sao?
@@ -132,3 +135,22 @@ remind/recollect/recall/evoke
 system of interlacing rivers anh canals (kênh rạch)
 streams (suoi)
 
+The tourists are much afraid of mosquitoes/leech/toilet over the pond.
+
+The Can Tho nearer equator than here so it hoter than here.
+
+the dophin have lung not the gills and they adapt with environment.
+
+khi nói về thời học sinh, nó gợi cho bạn điều gì?
+
+cá tra giống cá heo không?
+
+cá tra giống cá heo ở chỗ nào?
+
+what does it remind you when we are in school life.
+
+
+teen-age/childhood.
+
+ages/period
+pre-ages/mid-ages/modern ages.
