--- a/Lesson13_PeopleontheEarth./06_Q&A.md
+++ b/Lesson13_PeopleontheEarth./06_Q&A.md
@@ -35,3 +35,34 @@ dice: xí ngầu
 keep its balance when falling down
 submarin
 
+cage: chuồng
+
+Andes: châu Mĩ.
+Everest: châu Á
+Phanci phang: Châu Á
+Fuji: châu Á
+Pire'ne'e: sông Xanh
+Table Moutain: châu Mĩ.
+savage: hung dữ.
+fellow creature: 
+
+the gain can't offset the loss
+
+Stop destroying the forest, discharging dirty water into the rivers and streams, control population.
+
+ostrich:đà điểu
+
+bearing a baby
+race dog for again criminal
+
+used to V:
+be used to + V-ing.
+
+Those who living in the high mountain, in forest, they are used to hunting, picking up, if they move to flat land, they don't know how to work for live.
+
+The old people art used to living in the quiet places.
+extinction;
+exist: 
+
+Humanlity exist when they go to the Moon.
+I think humanlity continues exist because go to the Moon is an option like go to Mars. 
