--- a/Lesson13_PeopleontheEarth./06_Q&A.md
+++ b/Lesson13_PeopleontheEarth./06_Q&A.md
@@ -66,3 +66,20 @@ exist:
 
 Humanlity exist when they go to the Moon.
 I think humanlity continues exist because go to the Moon is an option like go to Mars. 
+
+
+What do people living in the plains do for a living?
+Những người sống ở đồng bằng sống bằng gì?
+
+How do they go down to the sea bed?
+
+How do they cross distance countries?
+Họ đi qua quốc gia xa xôi bằng cách nào?
+
+
+What are the things that prove human is diffrent from animals?
+
+My idea is diffrent from yours.
+
+fantastic person/seer/predic 
+
