--- a/Lesson17_Write_letter/06_Q&A.md
+++ b/Lesson17_Write_letter/06_Q&A.md
@@ -33,4 +33,98 @@ Vietnam's new year is defferent from America's.
 Whose pen is it?
 It's Huong's.
 
+I don't know how your NY is
+
+I don't know what she thought.
+
+Friday, 11th July, 2025
+
+(Conditional Sentence Type 1) 
+dùng để nói về một tình huống có thể xảy ra trong tương lai nếu điều kiện được đáp ứng.
+
+⸻
+
+✅ Cấu trúc:
+
+If + S + V1 (hiện tại đơn), S + will + V (nguyên mẫu)
+
+⸻
+
+📘 Giải thích & Sửa lỗi nhẹ trong ví dụ của bạn:
+
+Câu bạn viết	Đã đúng chưa?	Sửa lại nếu cần	Giải thích
+✅ If you love me, I will build a half lake for you.	✅ Đúng	Không cần sửa	Câu này đúng ngữ pháp và có tính nghệ thuật.
+❌ If we don’t water the flowers, they will be fade/withered.	❌ Sai	✅ If we don’t water the flowers, they will wither.	“Fade” và “wither” là động từ. Sau “will”, dùng động từ nguyên mẫu không “to”. Không dùng “be” + V3.
+❌ If you put your finger into the boiling water, it will be burned.	❌ Sai	✅ If you put your finger into boiling water, it will burn.	Tự nhiên hơn nếu dùng: “it will burn” (nó sẽ bị bỏng). Không cần “be burned” vì hành động chủ động xảy ra ngay lập tức.
+
+
+🔹 Tóm lại:
+
+Mệnh đề điều kiện (If)	Kết quả (Main clause)
+If + S + V1,	S + will + V
+
+
+⸻
+
+📌 Ví dụ thêm:
+	1.	If it rains tomorrow, we will stay home.
+(Nếu mai trời mưa, chúng tôi sẽ ở nhà.)
+	2.	If she studies hard, she will pass the exam.
+(Nếu cô ấy học chăm, cô ấy sẽ đậu kỳ thi.)
+	3.	If you don’t wear a helmet, you will get hurt.
+(Nếu bạn không đội mũ bảo hiểm, bạn sẽ bị thương.)
+
+
+Condition 2: If + S + V2 + O, S + would/could + V + O
+Câu điều kiện loại 2 (Conditional sentence type 2) được dùng để nói về những tình huống không có thật ở hiện tại hoặc khó có thể xảy ra.
+
+⸻
+
+✅ Cấu trúc:
+
+If + S + V2/ Ved + O, S + would/ could + V (nguyên mẫu) + O
+
+🔸 V2/Ved là động từ chia thì quá khứ đơn
+🔸 Trong mọi ngôi, động từ “to be” trong mệnh đề “if” thường dùng là “were”
+
+⸻
+
+📌 Ý nghĩa:
+
+Dùng để nói về một giả định trái với thực tế hiện tại.
+
+⸻
+
+📘 Ví dụ:
+
+Mệnh đề If	Mệnh đề chính	Nghĩa tiếng Việt
+If I had a car,	I would drive to work.	Nếu tôi có xe hơi, tôi sẽ lái xe đi làm.
+If she were taller,	she could play basketball.	Nếu cô ấy cao hơn, cô ấy có thể chơi bóng rổ.
+If we lived in Paris,	we would visit the Eiffel Tower.	Nếu chúng tôi sống ở Paris, chúng tôi sẽ đi tháp Eiffel.
+If they knew the answer,	they would tell us.	Nếu họ biết câu trả lời, họ sẽ nói với chúng ta.
+
+I wish you were by my side tonight, we could watch a new movie.
+
+
+🔹 Lưu ý:
+	1.	“Were” được dùng thay cho “was” trong tất cả các ngôi trong câu điều kiện loại 2:
+	•	✅ If I were you, I would study harder.
+(Nếu tôi là bạn, tôi sẽ học chăm hơn.)
+	2.	Câu có thể đảo ngữ để trang trọng hơn:
+	•	If I were you → Were I you, I would…
+	•	Ví dụ: Were he rich, he would travel the world.
+
+
+mentioned about the marriage
+
+2 tombed pine hill
+I have a 12 seated car
+We stayed at a 20 roomed hotel
+
+danh tu them ed vao sau co nghia la co.
+
+culture
+cultural conflict: xung dot van hoa
+
+
 
