--- a/Lesson17_Write_letter/06_Q&A.md
+++ b/Lesson17_Write_letter/06_Q&A.md
@@ -122,9 +122,34 @@ I have a 12 seated car
 We stayed at a 20 roomed hotel
 
 danh tu them ed vao sau co nghia la co.
-
 culture
 cultural conflict: xung dot van hoa
+
+Option 1:
+
+Gold is easier to sell than diamonds.
+⟶ (Vàng dễ bán hơn kim cương.)
+
+Option 2 (formal):
+
+It is easier to sell gold than diamonds.
+
+Option 3 (nhấn mạnh tính so sánh):
+
+Compared to diamonds, gold is easier to sell.
+
+what's your wife's farvorite food?
+
+Cattle: 4 legged animals
+poultry: 2 legged animals
+
+Among of cattle, which one do you like the most?
+
+Among of cattle, what kind of meat do you like the most?
+
+Among/monk/donkey/rock 
+
+Donkey + horse = he mula/she mula
 
 
 
