--- a/Lesson20_Dolphins/06_Q&A.md
+++ b/Lesson20_Dolphins/06_Q&A.md
@@ -3,6 +3,7 @@
 → Dolphins are classified as warm-blooded mammals.
 	2.	How do dolphins differ from fish?
 → Unlike fish, dolphins are warm-blooded, give birth to live young, and breathe air through lungs.
+It has 2 breasts, bear a baby and sucken her baby.
 	3.	Why are dolphins considered warm-blooded?
 → Dolphins maintain a constant body temperature regardless of their environment, which defines them as warm-blooded.
 	4.	How do dolphins typically live—in groups or alone?
@@ -20,7 +21,6 @@
 	10.	How do dolphins typically behave toward humans?
 → Dolphins often show friendly behavior toward humans and seem to enjoy human interaction.
 
-⸻
 
 🔎 II. Analytical Questions
 	11.	Why might dolphins be more socially developed than other sea animals?
@@ -34,7 +34,6 @@
 	15.	What can we infer from the fact that dolphins swim back and forth near beaches?
 → This behavior suggests they are intentionally seeking interaction or exploring their surroundings.
 
-⸻
 
 💬 III. Complex Sentence Structure / Conjunctions
 	16.	Although dolphins live in water, what traits do they share with land mammals?
@@ -48,7 +47,6 @@
 	20.	While some countries hunt dolphins for food, what actions have other nations taken?
 → Other nations have created laws to protect dolphins and prohibit killing them.
 
-⸻
 
 🌍 IV. Culture and Society
 	21.	How do Vietnamese people view dolphins culturally?
@@ -62,7 +60,6 @@
 	25.	Compare the attitudes toward dolphins in Vietnam with those in countries that hunt them.
 → In Vietnam, dolphins are respected and protected due to cultural beliefs, while in other countries, dolphins may be hunted for food.
 
-⸻
 
 🔗 V. Cause – Effect & Inference
 	26.	What might happen if dolphins were not protected by law?
@@ -76,7 +73,6 @@
 	30.	What does the longevity of dolphins suggest about their place in the marine ecosystem?
 → Their long lifespan indicates they play a stable and significant role in ocean life.
 
-⸻
 
 🧩 VI. Vocabulary & Language
 	31.	What does “warm-blooded” mean in the context of mammals?
@@ -90,8 +86,6 @@
 	35.	What does “against the law” imply about dolphin hunting?
 → It implies that dolphin hunting is illegal and punishable by law in certain countries.
 
-⸻
-
 🔄 VII. Rephrasing & Interpretation
 	36.	Rephrase the sentence: “Dolphins are not fish, but rather warm-blooded mammals.”
 → Dolphins are warm-blooded mammals, not fish.
@@ -104,3 +98,126 @@
 	40.	Why is the sentence “Vietnamese fishermen never dare to harm dolphins or whales” culturally significant?
 → It shows how traditional beliefs influence behavior and contribute to conservation.
 
+Tuesday, 15th July 2025
+
+Lucky- Luckily 
+Unlucky - Un luckily
+
+Fortunately/strangely
+
+swimming back/up and forth/down 
+
+I thank you very much
+He thanked
+thanks to your help
+I clould (get in touch)/contact with him
+
+
+They'll bring goodluck to them 
+They'll them goodluck
+
+the everage temperature is around 2 to 35 degrees centigrade in the South Viet Nam.
+
+alluvia: phuf sa.
+ultra sounds wave: 
+cuttle fish/squid
+Shrimp
+
+fin, tail
+they move with fins and tails.
+snake bear baby or eggs
+Sailor
+sea off NewZealand.
+zealons vs jealons
+
+wounded
+
+after being revover, Dolphins never guide 
+
+Thursday 17th July
+
+Offend/be offensive to SO/Sth
+
+They offend to scared saint (ho dam xuc pham than linh)
+
+Dolphins help fishermen in accident
+
+They call out of habit and dolphins look like fish.
+
+How long are woman pregnant?
+
+What are similarities between dolphins and humans?
+
+Dolphins regulate the salt and water in their bodies using kidneys. Saltwater dolphins excrete excess salt, while freshwater dolphins conserve salt and avoid absorbing too much water.
+
+
+Friday, 18th July, 2025
+Nhà tôi có 5 người, dạy học taị trường TH Vũng Tàu, ba tôi 55 tuổi, Lúc 5am bố tôi ăn sáng rồi làm việc với xe mấy, đôi khi xe buýt, 7pm bố tôi về nhà. Mẹ tôi 50 tuổi, làm việc tại bệnh viện Xuyên Mộc, bà đi là việc bằng xe máy.
+
+Anh tôi 30 là kĩ sư, làm việc tại SG, đôi khi cho tôi ít tiền.
+Em tôi tốt nghiệp cao đẳng SG, buổi chiều em anh đi làm tại công ty mỹ phẩm (Cosmetic)
+
+Tui 23 tuổi, là thợ hớt tóc nữ (hairdresser's -barber's) mọi ngày tôi dạy sớm để làm bài tập ví dụ như dọn dẹp nhà, đi chợ, mua bữa trưa, tôi luôn nấu ăn cho cả nhà, nếu tôi rãnh tôi đi tới quán cf coffee shop với mẹ tôi để nghe nhạc.
+Đôi khi cả nhà không làm việc, tui thích cuối tuần vì cả nhà cùng nhau, đặc biệt là vào dịp tết.
+
+
+Manicurist's (tiệm là nail)
+
+Manicure(v)
+Buddha: ông Phật.
+Ordinary days: ngày bình thường.
+
+Tuyệt vời! Dưới đây là bài nói ngắn phong cách TED Talk dựa trên câu chuyện “Chiếc Máy Tính Màu Xanh”, mang âm hưởng truyền cảm hứng, phù hợp với học sinh trung học:
+
+⸻
+
+The Power of a Secondhand Laptop
+
+“Sometimes, a dream doesn’t need to be brand new. It just needs to be real.”
+
+Good afternoon, everyone.
+
+Let me tell you about a boy named Tuấn. He lived in a quiet village where rice fields stretch farther than Wi-Fi signals could reach. But Tuấn had a big dream — he wanted to explore the digital world. Not to play games. But to create them.
+
+He had never touched a computer before. His school had only one — and it was locked in the teacher’s room. But every time he passed by a dusty electronics shop in town, he stopped. He stared. He dreamed.
+
+And then… on his 13th birthday, his mother handed him a small box wrapped in old newspaper.
+Inside?
+A secondhand laptop. A little scratched. A little slow. But to Tuấn… it was magic.
+
+He opened the lid. The screen lit up. And in that moment, his world got bigger.
+
+That night, he didn’t play games.
+He typed:
+“Thank you, Mom. I’ll use this to learn.”
+
+That little act — that gift — didn’t just give him a tool. It gave him a future.
+
+So let me ask you this:
+What would happen if every child had a chance like that?
+Not the latest gadget.
+Not a perfect device.
+Just a door.
+A door to knowledge.
+A door to hope.
+
+Because sometimes, changing the world doesn’t take billions.
+Sometimes, it only takes… one old laptop and a mother’s love.
+
+Thank you.
+
+
+guest
+visitor
+
+customer
+client
+
+patient (Bệnh nhân)
+
+pub = bar = saloon = tavern
+
+
+pour boire = bo
+souvenir
+tip
