--- a/Lesson21_SaiGon/06_Q&A.md
+++ b/Lesson21_SaiGon/06_Q&A.md
@@ -4,3 +4,22 @@ a pair of sport shoes
 
 sport shoes
 
+this = nay/này  -> these
+
+that = kia/đó  -> those
+
+arrive in SG 
+arrive at Suoi Tien
+
+ticket = fare: vé
+
+you
+
+I am not rich enough to purchase a car.
+
+evidence museum/ remmnats museum
+
+Tuesday, 22nd, July, 2025
+
+bother
+trouble
