cap nhat 1 so file convert sub, con thieu model whisper nhe

--- a/Lesson42_Marriage_money/06_Q&A.md
+++ b/Lesson42_Marriage_money/06_Q&A.md
@@ -6,3 +6,9 @@
 **Nam:** And in love, it’s similar. A rich man can **attract** many women. Some no longer care if he really **deserves** respect or not.
 **Anna:** That’s sad. Without learning to **appreciate** what we have, couples will **argue** and even get **divorced**.
 **Nam:** So true. In the end, many problems come simply because of money.
+
+
+H is an credable me.
+I will buy something on my credit.
+Let's me buy something on my credit.
+
